--- a/.verb.md
+++ b/.verb.md
@@ -12,7 +12,18 @@ npm.install('generate', function(err) {
 npm.uninstall('yeoman', function(err) {
   if (err) return console.log(err);
 });
+
+// or install only packages that don't already exist
+npm.maybeInstall(['foo', 'bar'], function(err) {
+  if (err) return console.log(err);
+});
 ```
 
 ## API
 {%= apidocs("index.js") %}
+
+## History
+
+**v0.1.1**
+
+- adds [maybeInstall]() method
