update history, run verb

--- a/.verb.md
+++ b/.verb.md
@@ -24,6 +24,10 @@ npm.maybeInstall(['foo', 'bar'], function(err) {
 
 ## History
 
+**v1.0.0**
+
+- adds [.global](#global) method, now used by the other methods
+
 **v0.1.1**
 
-- adds [maybeInstall]() method
+- adds [.maybeInstall](#maybeInstall) method
